Version 0.2.1Lb2

- Fixing pool payment system.
- Do not add to crypto array transactions already pending.
- Command "addnode" deprecated.
- Command "delnode" deprecated.
- Protocol "$NODES" deprecated.
- Implemented ThSa GetPendingCount.
- Implemented ThSa ClearAllPending.
- Undone server info catch system.
- Improved client close procedure.
- Added Russian language.

Version 0.2.1Lb1

- Official release.

Version 0.2.1La9

- URGENT anti injection system implemented.
- Closing app protocol improved.

Version 0.2.1La8

- Official release

Version 0.2.1La7

- Perfect close. Removed close timer.
- mpmn unit created.
- Full autodownload from repo windows/linux.

Version 0.2.1La6

- Node verify first if a report already exists to better performance.
- MNs hash added to ping/pong report.
- MNs hash added to slots list.
- MNs count added to ping/pong report.
- MNs count added to slot list.
- NetworkMNsHash consensus calculated.
- NetworkMNsCount consensus calculated.
- Fixed Pending request only when CriptoThreadRunning is false.
- Slots grid updated each second instead each cycle.
- Increased node max peers to 60.
- Masternodes data includedd in NodeStatus.
- Implemented double tracking system to pool pays.
- Masternodes info show on data panel.
- Masternodes download at connect.
- Implemented update from repo.
- Pool miner stats updates each second.
- History command improved.
- Added verificators to add and remove crypto operations to/from cryptothread.
- Modified .bat file creation to include autoupdates. (win only)
- Try..except blocks inside crypto thread.
- New Crypto operations array.
- Pool log implemented.
- New cripto thread engine implemented.
- Send outgoings thread made permanent.
- Do not re-sent received orders if node is not active.
- Implemented function IsValidMNReport.
- Implemented versionrequired CONST.
- Added seednode 172.245.52.208
- Removed seednode 185.239.239.184

Version 0.2.1La5

- Official release

Version 0.2.1La4
